--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  rxdart: ^0.27.4
+
 
 
   # The following adds the Cupertino Icons font to your application.
